# test_task_2025_Trajectory

./: README  pyproject.toml
src/config/: config.py
src/controllers/: main_all_func.py  main_console.py
src/models/: model_day.py  model_timeslot.py  work_schedule.py
src/tests/: unit_test.py
