[tool.poetry]
name = "test-task-2025-trajectory"
version = "0.1.0"
description = ""
authors = ["danil.bobryshov <danil.bobryshov@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

